--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>EdgePoint Learning Audio Samples</title>
-  <meta name="description" content="The HTML5 Herald">
+  <meta name="description" content="EdgePoint Learning Audio Samples">
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="style.css">
