progress bars for buffering, song progress

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       </div>
     </div>
 
+    <div class="progress-container">
+      <progress id="song-played-progress" amplitude-main-song-played-progress="true" class="amplitude-song-played-progress" value="0.5"></progress>
+      <progress id="song-buffered-progress" class="amplitude-buffered-progress" value="1"></progress>
+    </div>
+
     <table>
       <thead>
         <tr>
