--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EdgePoint Learning Audio Samples</title>
   <meta name="robots" content="noindex">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/picnic.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script type="text/javascript" src="javascript/amplitude.min.js"></script>
+  <title>EdgePoint Learning Audio Samples</title>
 </head>
 
 <body>
