--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
       <div class="half">
         <small>Now Playing:</small>
         <br>
-        <span amplitude-song-info="artist" amplitude-main-song-info="true" class="title"></span>
+        <span data-amplitude-song-info="artist" data-amplitude-main-song-info="true" class="title"></span>
         <br>
-        <span amplitude-song-info="album" amplitude-main-song-info="true">
+        <span data-amplitude-song-info="album" data-amplitude-main-song-info="true">
       </div>
       <div class="half right">
         <span class="controls">
           <a id="previous" class="glyphter amplitude-prev">E</a>
-          <a id="play-pause" class="glyphter amplitude-play-pause" amplitude-main-play-pause="true"></a>
+          <a id="play-pause" class="glyphter amplitude-play-pause" data-amplitude-main-play-pause="true"></a>
           <a id="next" class="glyphter amplitude-next">F</a>
         </span>
       </div>
     </div>
 
     <div class="progress-container">
-      <progress id="song-played-progress" amplitude-main-song-played-progress="true" class="amplitude-song-played-progress" value="0.5"></progress>
+      <progress id="song-played-progress" data-amplitude-main-song-played-progress="true" class="amplitude-song-played-progress" value="0.5"></progress>
       <progress id="song-buffered-progress" class="amplitude-buffered-progress" value="1"></progress>
     </div>
 
@@ -52,8 +52,8 @@
         {% for person in filtered_people %}
           <tr>
             <td>{{ person.name }}</td>
-            <td><a class="song amplitude-song-container amplitude-play-pause glyphter" amplitude-song-index="{% increment songindex %}"></a></td>
-            <td><a class="song amplitude-song-container amplitude-play-pause glyphter" amplitude-song-index="{% increment songindex %}"></a></td>
+            <td><a class="song amplitude-song-container amplitude-play-pause glyphter" data-amplitude-song-index="{% increment songindex %}"></a></td>
+            <td><a class="song amplitude-song-container amplitude-play-pause glyphter" data-amplitude-song-index="{% increment songindex %}"></a></td>
           </tr>
         {% endfor %}
       </tbody>
