--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
 ---
-# this header tells jekyll to process this file
+layout: default
 ---
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="robots" content="noindex">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/picnic.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <script type="text/javascript" src="javascript/amplitude.min.js"></script>
-  <title>EdgePoint Learning Audio Samples</title>
-</head>
 
 <body>
   <div id="container">
@@ -81,4 +70,3 @@
     });
   </script>
 
-</html>
