--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,6 @@
----
-# this header tells jekyll to process this file
----
 <!doctype html>
 <html class="no-js" lang="en">
+  
 <head>
   <meta charset="utf-8">
   <meta name="robots" content="noindex">
@@ -15,6 +13,7 @@
 
 <body>
   <div id="container">
+    
     <p><img src="images/epl-horizontal-combination-mark.svg" alt="EdgePoint Learning"></p>
 
     <div class="flex player">
@@ -48,8 +47,7 @@
         </tr>
       </thead>
       <tbody>
-        {% assign filtered_people = site.data.people %}
-        {% for person in filtered_people %}
+        {% for person in people %}
           <tr>
             <td>{{ person.name }}</td>
             <td><a class="song amplitude-song-container amplitude-play-pause glyphter" data-amplitude-song-index="{% increment songindex %}"></a></td>
@@ -65,7 +63,7 @@
   <script type="text/javascript">
     Amplitude.init({
       "songs": [
-        {% for person in filtered_people %}
+        {% for person in people %}
           {
             "artist": "{{ person.name }}",
             "album" : "Professional",
