add bottom margin to table

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 
 
 
-    <table class="w-full shadow-md shadow-slate-300 rounded-xl">
+    <table class="w-full mb-4 shadow-md shadow-slate-300 rounded-xl">
       <thead>
         <tr class="leading-4 tracking-wide border-b-2 border-slate-500 bg-slate-100 text-slate-600">
           <th class="pt-4 pb-3 pl-4 font-normal text-left rounded-tl-xl">Name</th>
