add metagen 11ty plugin for open graph data

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,11 @@
+---
+og-data: 
+    title: EdgePoint Learning Audio Samples
+    desc: Choose the perfect narrator for your project.
+    url: https://audio.edgepointlearning.com
+    img: https://audio.edgepointlearning.com/ogimage.jpg
+    img_alt: EdgePoint Learning's audio talent
+---
 <!doctype html>
 <html class="no-js" lang="en">
   
@@ -8,6 +16,7 @@
   <link rel="stylesheet" href="/css/styles.css">
   <script type="text/javascript" src="javascript/amplitude.min.js"></script>
   <title>EdgePoint Learning Audio Samples</title>
+  {% metagen og-data %}
 </head>
 
 <body>
