stricter robots meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@ og-data:
   
 <head>
   <meta charset="utf-8">
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
   <script type="text/javascript" src="javascript/amplitude.min.js"></script>
