change player shadow color

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@ og-data:
 
     {% svg "epl-logo", "w-full my-10 h-[50px] px-4 mx-auto" %}
 
-    <div class="sticky flex flex-wrap justify-between p-4 mb-8 shadow-md -top-2 bg-gradient-to-bl from-indigo-900 via-blue-700 to-indigo-900 rounded-xl shadow-slate-400">     
+    <div class="sticky flex flex-wrap justify-between p-4 mb-8 shadow-md -top-2 bg-gradient-to-bl from-indigo-900 via-blue-700 to-indigo-900 rounded-xl shadow-indigo-400">     
       <div>
         <p class="mb-2 text-xl font-bold leading-none text-white" data-amplitude-song-info="artist" data-amplitude-main-song-info="true"></p>
         <p class="text-lg leading-none text-blue-100" data-amplitude-song-info="album" data-amplitude-main-song-info="true"></p>
